--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -26,6 +26,15 @@
             {% endblock content %}
         </div>
 
+
+
+
+
+
+
+
+
+
 <script type="text/javascript">
     var user='{{request.user}}'
     function getToken(name) 
@@ -45,11 +54,33 @@
                 }
             }
         }
-    return cookieValue;
+        return cookieValue;
     }
     var csrftoken = getToken('csrftoken')
+    
+    
+    
+    function getCookie(name)
+    {
+        var cookieArr=document.cookie.split(";")
+        for(var i =0;i<cookieArr.length;i++)
+        {
+            var cookiePair = cookieArr[i].split("=")
+            if(name==cookiePair[0].trim()){
+                return decodeURIComponent(cookiePair[1])
+            }
+        }
+        return null;
+    }
+    var cart=JSON.parse(getCookie("cart"))
+    if(cart == undefined){
+        cart = {};
+        console.log("cart was created");
+        document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/";
+      }
+    
+    console.log("cart",cart)
 </script>
-
 
 
     <script src="{% static 'js/cart.js' %}"></script>
