--- a/templates/store/nevbar.html
+++ b/templates/store/nevbar.html
@@ -12,15 +12,15 @@
         </li>
    
       </ul>
-      <div class="form-inline my-2 my-lg-0">
+      <div class="">
+      <div class="form-inline my-2 my-lg-0  d-flex murat ">
            <a href="#"class="btn btn-warning">Login</a>
            
            <a href="{% url 'cart' %}">
               <img  id="cart-icon" src="{% static 'images/cart.png' %}">
           </a>
-          <p id="cart-total">{{orderitem}}</p>
-          
-
+          <p id="cart-total">{{order.get_cart_items}}</p>
       </div>
     </div>
+  </div>
   </nav>
